Fix little bug on Safari

--- a/app/styles/home.css
+++ b/app/styles/home.css
@@ -192,7 +192,6 @@
 /* ABOUT */
 .about-img {
   width: 100%;
-  height: 100%;
 }
 
 .about-bloc {
